# flappy-lib

./: Cargo.toml
src/: config.rs  lib.rs
src/assets/: background_material.rs  mod.rs
src/bundles/: background.rs  mod.rs  pipe.rs  player.rs  score_ui.rs
src/components/: gravity.rs  mod.rs  pipe.rs  player.rs  score.rs  velocity.rs
src/events/: end_game.rs  mod.rs  score.rs
src/plugins/: background.rs  camera.rs  group.rs  mod.rs  pipe.rs  pipes.rs  player.rs  score.rs
src/resources/: score.rs
src/systems/: background.rs  bounds.rs  camera.rs  check_collisions.rs  controls.rs  despawn_pipe.rs  gravity.rs  mod.rs  move_pipe.rs  player.rs  player_direction.rs  respawn.rs  score.rs  spawn_pipe.rs  spawn_score_ui.rs
src/systems/observers/: mod.rs  reset_score.rs  score.rs
