[package]
name = "flappy-lib"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
bevy = "0.18.0"
bevy-inspector-egui = { version = "0.36.0", optional = true }
derive-getters = "0.5.0"
bevy_rand = { version = "0.13.0", features = ["rand_chacha"] }
bevy_prng = { version = "0.13.0", features = ["rand_chacha"] }
rand = "0.9.2"
